package com.sample.easytodo.core.util

object TestTags {

    const val FILTER_SECTION = "FILTER_SECTION"
    const val FILTER_BUTTON = "FILTER_BUTTON"
    const val TASK_ITEM = "TASK_ITEM"

    const val RADIO_PENDING = "RADIO_PENDING"
    const val RADIO_IN_PROGRESS = "RADIO_IN_PROGRESS"
    const val RADIO_DONE = "RADIO_DONE"
    const val RADIO_NONE = "RADIO_NONE"

    const val TITLE_FIELD = "TITLE_FIELD"
    const val DESP_FIELD = "DESP_FIELD"

}