...
            FloatingActionButton(
                onClick = {
                    navController.navigate(Screen.AddUpdateTaskScreen.route)
                },
                backgroundColor = MaterialTheme.colors.primary,
                modifier = Modifier
                    .semantics { contentDescription = "Add" }
            ) {
                Icon(imageVector = Icons.Default.Add, contentDescription = "Add Icon")
            }
        },
        scaffoldState = scaffoldState
    ) {
...
